--- a/src/styles/main-contenet.css
+++ b/src/styles/main-contenet.css
@@ -74,11 +74,11 @@ figure {
 
 
 .content-img-5 .zoom-In  img {
-	transform: scale(1);
-	transition: 0.6s ease-in-out;
+	/* transform: scale(1);
+	transition: 0.6s ease-in-out; */
 }
 .content-img-5 .zoom-In :hover img {
-	transform: scale(1.1);
+	/* transform: scale(1.1); */
 }
 
 
