--- a/src/styles/main-contenet.css
+++ b/src/styles/main-contenet.css
@@ -2,6 +2,7 @@
     margin: 140px 0 20px  0;
 }
 
+/* content-2 */
 
 .content-img-2 {
     margin: 15px 0;
@@ -24,7 +25,7 @@ figure {
 }
 
 
-
+/* content-3 */
 
 .content-img-3 {
     margin: 15px 0;
@@ -43,6 +44,8 @@ figure {
 }
 
 
+/* content-4 */
+
 
 .content-img-4 {
     margin: 20px 0;
@@ -55,6 +58,8 @@ figure {
 .content-img-4 #zoom-In figure:hover img {
 	transform: scale(1.1);
 }
+
+/* content-5 */
 
 
 .content-img-5 {
@@ -73,13 +78,13 @@ figure {
 }
 
 
-.content-img-5 .zoom-In  img {
-	/* transform: scale(1);
-	transition: 0.6s ease-in-out; */
+/* .content-img-5 .zoom-In  img {
+	transform: scale(1);
+	transition: 0.6s ease-in-out;
 }
 .content-img-5 .zoom-In :hover img {
-	/* transform: scale(1.1); */
-}
+	transform: scale(1.1);
+} */
 
 
 .content-img-5 .text{
@@ -102,6 +107,7 @@ figure {
 }
 
 
+/* straight line */
 
 .line-text {
     text-align: center; 
@@ -113,7 +119,6 @@ figure {
 }
 
 span {
-    /* letter-spacing: 0.1em; */
     font-size: 28px;
     position: relative;
     top: 20px;
