--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -53,7 +53,7 @@
       border-bottom:1px solid #333;
     }
       
-  /* ------------------------------ */
+  /* ------------Nav Bottom------------------ */
   
   .content-bottom{
       margin: 0 0 10px 0;
@@ -78,56 +78,63 @@
       border-bottom: 3px solid black;
   }
   
-  .dropdown_container {
-      display: none;
-      justify-content: space-between;
-      background: #fff;
-      border: 1px solid #333;
-  }
-  
-  
-  
-  
-  .navbar li:hover  .dropdown_container  {
-      display: flex;
-      position: absolute;
-      top: 120px;
-      left: 0%;
-      width: 100%;
-      height: auto;
-      padding: 10px;
-      animation-name: fade;
-      animation-duration: 0.4s;
-  }
-  
-  
-  
-  @keyframes fade {
-    from {opacity: .5} 
-    to {opacity: 1}
-  }
+ 
+
+/* Drop down nav */
+
+.dropdown_container {
+    display: none;
+    justify-content: space-between;
+    background: #fff;
+    border: 1px solid #333;
+    cursor: pointer;
+}
 
 
 
 
+.navbar li:hover  .dropdown_container  {
+    display: flex;
+    position: absolute;
+    top: 120px;
+    left: 0%;
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    animation-name: fade;
+    animation-duration: 0.4s;
+}
 
-  .dropdown_container .container ul  {
-      position: relative;
-      left: 0px;
-      padding: 10px;
-  }
-   .dropdown_container .container ul h1 {
-      font-size: 14px;
-      color: #787878;
-      line-height: 1.8;
-      margin-top: 10px;
-  }
-  
-   .dropdown_container .container ul li {
+
+
+@keyframes fade {
+  from {opacity: .5} 
+  to {opacity: 1}
+}
+
+
+.dropdown_container .container ul  {
+    position: relative;
+    left: 0px;
+    padding: 10px;
+}
+
+
+.dropdown_container .container ul h1 {
+    font-size: 14px;
+    color: #787878;
+    line-height: 1.8;
+    margin-top: 10px;
+}
+
+
+.dropdown_container .container ul li {
       font-size: 12px;
       color: #787878;
       line-height: 1.4;
   }
+
+
   
   .dropdown_container .container .left {
       position: relative;
@@ -148,6 +155,11 @@
   
   
 
+  .dropdown_container .container ul:hover {
+    color: rgba(255, 0, 0, 0.671);
+}
+
+/* search icon */
   .bx {
     cursor: pointer;
     position: relative;
