--- a/src/styles/slider-corousel.css
+++ b/src/styles/slider-corousel.css
@@ -53,7 +53,6 @@ img {vertical-align: middle;}
     width: 5px;
     margin: 0 2px;
     background-color: #bbb;
-    /* border-radius: 50%; */
     display: inline-block;
     transition: background-color 0.6s ease;
     margin-bottom: 20px;
@@ -72,4 +71,9 @@ img {vertical-align: middle;}
 @keyframes fade {
   from {opacity: .5} 
   to {opacity: 1}
+}
+
+.slideshow-container .slider-img {
+  width: 99%;
+  height: auto;
 }
