--- a/src/styles/slider-corousel.css
+++ b/src/styles/slider-corousel.css
@@ -3,7 +3,7 @@ img {vertical-align: middle;}
 
 
 .slideshow-container {
-  max-width: 1000px;
+  width: 100%;
   position: relative;
   margin: auto;
 }
