--- a/src/styles/main-contenet.css
+++ b/src/styles/main-contenet.css
@@ -78,16 +78,19 @@ figure {
 }
 
 
-/* .content-img-5 .zoom-In  img {
+
+.content-img-5 .zoom-In  img {
 	transform: scale(1);
 	transition: 0.6s ease-in-out;
 }
 .content-img-5 .zoom-In :hover img {
 	transform: scale(1.1);
-} */
+}
 
 
 .content-img-5 .text{
+    position: relative;
+    height: 100%;
     padding: 30px;
    background-color: #444;
    color: #fff;
