--- a/src/styles/slider-corousel.css
+++ b/src/styles/slider-corousel.css
@@ -18,14 +18,14 @@ img {vertical-align: middle;}
 .left_arrow {
     cursor: pointer;
     position: absolute;
-    top: 50%;
-    left: -50px;
+    top: 45%;
+    left: -10px;
     width: auto;
     padding: 16px;
     margin-top: -22px;
-    color: black;
+    color: #fff;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 40px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
@@ -34,13 +34,13 @@ img {vertical-align: middle;}
   .right_arrow {
     cursor: pointer;
     position: absolute;
-    top: 50%;
-    right: -50px;
+    top: 45%;
+    right: -10px;
     width: auto;
     padding: 16px;
     margin-top: -22px;
-    color: rgba(0, 0, 0, 0.699);
-    font-size: 30px;
+    color: #fff;
+    font-size: 40px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
   }
